# sbx

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.txt  README.md  messages.xml
api/: .env.example  Cargo.toml  auth-schema.ts  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
api/src/: aeron_handler.rs  errors.rs  main.rs  main.ts  order.rs  routes.rs  temp.ts
api/src/config/: index.ts
api/src/db/: index.ts  schema.ts
api/src/entities/: order.ts
api/src/lib/: auth.ts  middleware.ts
api/src/models/: index.ts  order-schema.ts  order.ts  product.ts
api/src/routes/: order-routes.ts  verify-ign.ts
auth/: .env.example  .prettierignore  package-lock.json  package.json
db-service/: package-lock.json  package.json
docs/: package-lock.json  package.json  tailwind.config.ts
md/: Cargo.toml  eslint.config.mjs  go.mod  package-lock.json  package.json
md/ticker/: Cargo.toml
md/ticker/src/: main.rs  orderbook.rs
md/ticker/src/processors/: execution.rs  mod.rs  ticker.rs
md/ticker/src/transport/: aeron.rs
me/: .env.example  .gitignore  Cargo.toml  main.txt  messages.xml
me/aeron-pub/: Cargo.toml
me/aeron-pub/src/: main.rs
rest-api/: Cargo.toml  messages.xml
schemas/: order-request.schema.json  order.schema.json  product.schema.json
snapshot/: Cargo.toml
tr/: Cargo.toml
tr/core/: Cargo.toml
tr/core/src/: main.rs
tr/sbe/src/: cxl_rej_reason_enum.rs  execution_report_codec.rs  ord_type_enum.rs  order_cancel_reject_codec.rs  side_enum.rs
tr/src/: aeron_handler.rs  main.rs  main.ts
tr/src/db/: schema.ts
web/: README.md  package-lock.json  package.json  vite.config.ts  (+1 more)
ws/: .env.example  Cargo.toml  package-lock.json  package.json  tsconfig.json
ws/api/: Cargo.toml
ws/api/src/: aeron_handler.rs  main.rs  messages.rs
ws/core/: Cargo.toml
ws/core/src/: aeron_handler.rs  main.rs  sbe_messages.rs
ws/sbe/src/: new_order_single_codec.rs  ord_type_enum.rs  side_enum.rs  utc_timestamp_nanos_codec.rs
ws/src/: main.rs  main.ts  messages.rs  orderbook.rs  websocket.rs
ws/src/channels/: handlers.ts  index.ts  level2.ts  user.ts
ws/src/config/: index.ts
ws/src/lib/: auth.ts  middleware.ts
ws/src/messages/: authenticate.ts  index.ts  subscriptions.ts
ws/src/models/: AuthenticatedWebSocket.ts  CandlesChannel.ts  Channel.ts  Level2Channel.ts  OrderBook.ts  TickerBatchChannel.ts  TickerChannel.ts  UserChannel.ts  authenticated-websocket.d.ts  index.ts  messages.ts  order.ts  product.ts
ws/src/processors/: execution.rs  level2.rs
ws/src/transport/: aeron.rs
ws/src/utils/: auth.ts
(+185 files in other folders)
