[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
aeron-rs = "0.1.8"
axum = "0.8.4"
chrono = "0.4.41"
env_logger = "0.11.8"
log = "0.4.27"
sbe = { path = "../sbe" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v4"] }
