[package]
name = "trade-reporter"
version = "0.1.0"
edition = "2024"

[dependencies]
aeron-rs = "0.1.8"
chrono = "0.4.41"
env_logger = "0.11.8"
log = "0.4.27"
questdb-rs = { version = "4.0.4", features = ["chrono_timestamp"] }
sbe = { path = "../sbe" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
