[package]
name = "websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
aeron-rs = "0.1.8"
chrono = "0.4.41"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
sbe = { path = "../sbe" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
uuid = { version = "1.17.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"