[package]
name = "websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] }
async-nats = "0.42.0"
futures-util = "0.3.31"
chrono = "0.4.41"
serde_json = "1.0.140"
