[package]
name = "ticker"
version = "0.1.0"
edition = "2024"

[dependencies]
sbe = { path = "../../sbe" }
tokio = { version = "1", features = ["full"] }
aeron-rs = "0.1.8"
async-nats = "0.42.0"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"