[package]
name = "aeron-pub"
version = "0.1.0"
edition = "2024"

[dependencies]
aeron-rs = "0.1.8"
clap = "4.5.38"
ctrlc = "3.4.7"
hdrhistogram = "7.5.4"
hex = "0.4.3"
lazy_static = "1.5.0"
nix = "0.30.1"
pretty_env_logger = "0.5.0"
rand = "0.9.1"
sbe = { path = "../sbe" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
